--- a/Home/home.html
+++ b/Home/home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poker</title>
+    <title>Black Jack</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <h1 class="title">Poker</h1>
+    <h1 class="title">Black Jack </h1>
 
     <div class="home_page_buttons">
         <button class="play_button">Play</button>
