made all the websites connect to each other

--- a/Bots/bots.html
+++ b/Bots/bots.html
@@ -26,6 +26,6 @@
             </div>
         </div>
     </div>
-    <source src="bots.js"></source>
+    <script src="bots.js"></script>
 </body>
 </html>
